--- a/Desafios/styles.social.media.css
+++ b/Desafios/styles.social.media.css
@@ -1,10 +1,21 @@
+
+
 body {
-    color: brown;
-    font-family: 'Comfortaa', cursive;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Noto Sans JP', sans-serif;
-    font-family: 'Permanent Marker', cursive;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Shadows Into Light', cursive;
-    font-family: 'Source Sans Pro', sans-serif;
+    background-color: #FAF7FD;
+}
+
+.imagem_perfil {
+    width: 20%;
+    height: 5%;
+    border: 2px;
+    border-style: solid;
+    border-color: #BB99DD;
+    box-sizing: border-box;
+    border-radius: 50%
+}
+
+
+div {
+    text-align: center;
+    margin-top: 10%;
 }
