--- a/HTML e CSS/layout.css
+++ b/HTML e CSS/layout.css
@@ -1,14 +1,16 @@
 /*
+
+Normal Flow (é a natureza do os displays block e inline)
+
 # Display Block
 (div, section, p, h1, h2, ul, li, article)
 
 -ocupa 100% da largura do elemento pai
--ocupa sempre a sua propria linha e é posicionado abaxio do elemento anterior 
+-ocupa sempre a sua propria linha e é posicionado abaixo do elemento anterior 
 -a altura é definida de acordo com o conteúdo interno
 -é possível definir width e height
 -você pode definir valores de margin-top e margin-botton.
 
-Normal Flow (é a natureza do os displays block e inline)
 # Display Inline
 (a, span, b, i, em)
 
@@ -17,7 +19,7 @@ Normal Flow (é a natureza do os displays block e inline)
 -nao é possivel definir width e heigth
 -nao é possível definir valores de margin-top e margin-botton
 -ao aplicar o float, automaticamente eles assumem caracteristicas de display block
--se aplicado dentro de um texto, ira segui o fluxo do conteudo
+-se aplicado dentro de um texto, ira seguir o fluxo do conteudo
 
 
 Os dois podem ter sua natureza alterada se usarmos: display: block ou inline.
@@ -41,10 +43,14 @@ A caixa se torna flex, fazendo com que os elementos internos possam receber melh
 ex: 
 html:
 
-<div class="flexbox">
+<div class="box">
     <div class="item">A</div>
     <div class="item">B</div>
     <div class="item">C</div>
 </div>
 
 CSS:
+
+.box {
+    display: flex
+}
